crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@simple__function_simple.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for simple/function_simple.cm
input_file: test_data/simple/function_simple.cm
---
Fixture: simple/function_simple.cm
============================================================
Source code:
fn test() -> felt {
    return 42;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 42

  }

}
