crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@simple__function_with_params.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for simple/function_with_params.cm
input_file: test_data/simple/function_with_params.cm
---
Fixture: simple/function_with_params.cm
============================================================
Source code:
fn add(a: felt, b: felt) -> felt {
    return a + b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      return %2

  }

}
