crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@simple__function_with_return.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for simple/function_with_return.cm
input_file: test_data/simple/function_with_return.cm
---
Fixture: simple/function_with_return.cm
============================================================
Source code:
fn identity(x: felt) -> felt {
    let y = x;
    return y;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn identity {
    parameters: [0]
    entry: 0

    0:
      return %0

  }

}
